--- a/index.html
+++ b/index.html
@@ -3,65 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>U.S. Flag Status Monitor</title>
+    <title>Flag Status</title>
+    <meta name="description" content="Real-time U.S. flag status monitor">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <meta name="description" content="Real-time U.S. flag status monitor showing current flag position (full-staff or half-staff)">
 </head>
 <body>
-    <header>
-        <h1>🇺🇸 U.S. Flag Status Monitor</h1>
-    </header>
+    <div class="container">
+        <div class="time">NOW</div>
 
-    <main>
-        <div class="flag-container">
-            <div class="pole"></div>
-            <div class="flag" id="flag">
-                <div class="stripes">
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                    <div class="stripe"></div>
-                </div>
-                <div class="union">
-                    <div class="stars"></div>
-                </div>
+        <div class="status-display">
+            <div class="status-label">STATUS</div>
+            <div class="status-value" id="status-text">FULL</div>
+        </div>
+
+        <div class="details">
+            <div class="detail-row">
+                <div class="detail-label">POSITION</div>
+                <div class="detail-value" id="position-value">---</div>
+            </div>
+            <div class="detail-row">
+                <div class="detail-label">SINCE</div>
+                <div class="detail-value" id="since-value">---</div>
+            </div>
+            <div class="detail-row">
+                <div class="detail-label">DURATION</div>
+                <div class="detail-value" id="duration-value">---</div>
+            </div>
+            <div class="detail-row">
+                <div class="detail-label">SOURCE</div>
+                <div class="detail-value" id="source-value">---</div>
             </div>
         </div>
 
-        <div class="status-info">
-            <h2>Current Status: <span id="status-text">Loading...</span></h2>
-            <p id="reason"></p>
-            <p class="last-updated">Last updated: <span id="last-updated">checking...</span></p>
-            <p class="source">Source: <span id="source">checking...</span></p>
+        <div class="timeline-section">
+            <div class="timeline-header">
+                <span>TODAY</span>
+                <span>WED</span>
+                <span>THU</span>
+                <span>FRI</span>
+                <span>SAT</span>
+                <span>SUN</span>
+                <span>MON</span>
+            </div>
+            <div class="timeline" id="timeline">
+                <div class="timeline-line"></div>
+                <div class="timeline-marker"></div>
+            </div>
+            <div class="timeline-controls">
+                <button class="timeline-button active">DAY</button>
+                <button class="timeline-button">WEEK</button>
+            </div>
         </div>
-    </main>
 
-    <footer>
-        <p>Data sourced from official U.S. government sources. Updates every 6 hours.</p>
-        <p>
-            <a href="https://github.com/jacob-booth/flag-status-monitor" target="_blank" rel="noopener noreferrer">
-                View on GitHub
-            </a>
-            |
-            <a href="docs/" target="_blank" rel="noopener noreferrer">
-                Documentation
-            </a>
-        </p>
-    </footer>
+        <div class="proclamation-panel" id="proclamation-panel">
+            <div class="handle"></div>
+            <div class="proclamation-content">
+                <div class="proclamation-label">PROCLAMATION</div>
+                <p id="proclamation-text">Loading latest proclamation...</p>
+                <div class="proclamation-meta">
+                    <span id="proclamation-date">---</span>
+                    <a href="#" id="proclamation-link" target="_blank">VIEW FULL TEXT →</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="loading-overlay" id="loading-overlay">
         <div class="loading-spinner"></div>
-        <p>Loading flag status...</p>
     </div>
 
     <script src="app.js"></script>
