--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Flag Monitor">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Flag Monitor">
     
     <!-- Icons -->
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
-    <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#3C3B6E">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.svg">
+    <link rel="mask-icon" href="assets/favicon.svg" color="#3C3B6E">
+    <link rel="manifest" href="manifest.json">
     
     <!-- Preload critical resources -->
     <link rel="preload" href="src/css/styles.css" as="style">
