Add state selector, history modal, and status badge

--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
                     Checking official sources...
                 </div>
 
+                <div class="status-card__state">
+                    <label class="status-card__label" for="state-select">Scope</label>
+                    <select id="state-select" class="state-select" aria-label="Select flag status scope"></select>
+                </div>
+
                 <!-- Enhanced context information -->
                 <div id="status-context" class="status-card__context" aria-live="polite">
                     Loading detailed information...
@@ -259,8 +264,8 @@
         <div class="footer__container">
             <div class="footer__content">
                 <p class="footer__text">
-                    Data sourced from official U.S. government sources. 
-                    Updates automatically every hour during business hours.
+                    Data sourced from HalfStaff.org and official notices.
+                    Updates automatically every hour.
                 </p>
                 
                 <div class="footer__links">
